# PSNProfiles-scraper

./: .gitignore  .pypirc  InvalidProfileError.py  LICENSE  MANIFEST.in  PsnScraper.py  README.md  README.rst  Utils.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
PsnProfiles/: Game.py  Profile.py  Trophy.py
psnprofiles_scraper/: __init__.py
psnprofiles_scraper/src/: BeautifulSoupFactory.py  PsnProfilesScraper.py
psnprofiles_scraper/src/PsnProfiles/: Game.py  Level.py  Milestone.py  Profile.py  ProfileSummary.py  Trophy.py
src/: BeautifulSoupFactory.py  ProgressBar.py  PsnProfileObjectInterface.py  PsnProfileScraper.py  PsnProfilesObjectInterface.py  PsnProfilesScraper.py  PsnScraper.py  Utils.py
src/PsnProfiles/: Game.py  Level.py  Milestone.py  Profile.py  ProfileSummary.py  Trophy.py
tests/: test_psn_profiles_data.py  test_username.py
